[project]
name = "mcp-json-sanity"
version = "0.1.0"
description = "MCP server for JSON validation and repair, StreamableHTTP transport"
requires-python = ">=3.11"
dependencies = [
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jsonschema>=4.0.0",
    "mcp[cli]>=1.27.0",
    "starlette>=1.0.0",
    "stripe>=15.0.1",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/smoke_test.py"
